去除修改用户信息验证

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
   # 配置 Redis
   redis:
     host: 47.115.148.227
-    password:
+    password: nishi213
     timeout: 5000
     database: 0
   jackson:
