--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,12 +25,23 @@ spring:
     time-zone: GMT+8
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     open-in-view: true
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
+  main:
+    host: smtp.163.com
+    userename: cghAkuma@163.com
+    password:
+    properties.mail.smtp.port: 456
+    from: cghAkuma@163.com
+    properties.mail.smtp.starttls.enable: true
+    properties.mail.smtp.starttls.required: true
+    properties.mail.smtp.ssl.enable: true
+    default-encoding: utf-8
+
 
 #  spring.jackson.default-property-inclusion=non_null
 #  spring.jackson.time-zone=GMT+8
