--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 # 配置数据源
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/library?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=GMT
+    url: jdbc:mysql://:3306/library?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=GMT
     username: root
     password: nishi213
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -16,7 +16,7 @@ spring:
       max-request-size: 30MB
   # 配置 Redis
   redis:
-    host: 127.0.0.1
+    host:
     password:
     timeout: 5000
     database: 0
@@ -35,17 +35,16 @@ spring:
     host: smtp.163.com
     userename: cghakuma@163.com
     password:
+    port: 25
     protocol: smtp
     default-encoding: utf-8
     properties:
       mail:
         smtp:
-          port: 465
-          strattls:
+          auth: true
+          starttls:
             enable: true
             required: true
-        ssl:
-          enable: true
 
 #  spring.jackson.default-property-inclusion=non_null
 #  spring.jackson.time-zone=GMT+8
