--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 # 配置数据源
 spring:
   datasource:
-    url: jdbc:mysql://:3306/library?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=GMT
+    url: jdbc:mysql://127.0.0.1:3306/library?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=GMT
     username: root
     password: nishi213
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -16,10 +16,10 @@ spring:
       max-request-size: 30MB
   # 配置 Redis
   redis:
-    host:
+    host: 127.0.0.1
     password:
     timeout: 5000
-    database: 0
+    database: 1
   jackson:
     default-property-inclusion: non_null
     time-zone: GMT+8
@@ -33,7 +33,6 @@ spring:
         dialect: org.hibernate.dialect.MySQL5InnoDBDialect
   mail:
     host: smtp.163.com
-    userename: cghakuma@163.com
     password:
     port: 25
     protocol: smtp
@@ -45,6 +44,7 @@ spring:
           starttls:
             enable: true
             required: true
+    username: cghakuma@163.com
 
 #  spring.jackson.default-property-inclusion=non_null
 #  spring.jackson.time-zone=GMT+8
